some changes on input tag

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <form class="quiz-form">
             <p>1.which is not a proggramming language?</p>
             <div class="question1">
-            <input  type="radio" name="q1" value="A" checked>
+            <input  type="radio" name="q1" value="A" >
             <label class="question">Sql</label>
             </div>
             <div class="question1">
@@ -38,7 +38,7 @@
            
                     <p>2.Which  city also known as 'big apple"</p>
                     <div class="question2">
-                    <input  type="radio" name="q2" value="A" checked>
+                    <input  type="radio" name="q2" value="A" >
                     <label class="question">london</label>
                     </div>
                     <div class="question1">
@@ -52,7 +52,7 @@
                     <!--question3-->
                     <p>3.Where was born Jonathan Swift?</p>
                     <div class="question3">
-                    <input  type="radio" name="q3" value="A" checked>
+                    <input  type="radio" name="q3" value="A" >
                     <label class="question">london</label>
                     </div>
                     <div class="question1">
@@ -66,7 +66,7 @@
                     <!--Question4-->
                     <p>4.Which work belongs to the Agatha Cristie?</p>
                     <div class="question3">
-                    <input  type="radio" name="q4" value="A" checked>
+                    <input  type="radio" name="q4" value="A" >
                     <label class="question">How to stop the time</label>
                     </div>
                     <div class="question1">
